--- a/new_madrid/src/App.css
+++ b/new_madrid/src/App.css
@@ -19,7 +19,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +27,36 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.Title {
+  min-height: 8vh;
+  width: 100%;
+  background-color: #007e3e;
+  text-align: left;
+  margin-bottom: 5vh;
+  font-family: "Montserrat";
+
+  padding-top: 2vh;
+
+  font-size: 4vh;
+
+  display: flex;
+}
+
+.Title img {
+  width: auto;
+  padding: 0px;
+  max-height: 10vh;
+  margin-top: -2vh;
+}
+
+.Title p {
+  margin: 0px;
+  margin-left: 25px;
+  padding: 0px;
 }
