--- a/new_madrid/src/StandardGraph/style.css
+++ b/new_madrid/src/StandardGraph/style.css
@@ -4,9 +4,10 @@
     /* border: 5px red solid; */
     font-family: "Montserrat";
     overflow: visible;
-    font-size: 20px;
+    font-size: 16px;
 
     text-align: left;
+    margin-bottom: 32px;
 }
 
 .StandardGraph h {
@@ -25,6 +26,6 @@
 
 .RangeTooltip {
     width: 100%;
-    height: 60px;
-    /* border: 5px red solid; */
+    height: 30px;
+    border: 5px grey solid;
 }
