--- a/new_madrid/src/PredictionGraph/style.css
+++ b/new_madrid/src/PredictionGraph/style.css
@@ -24,9 +24,21 @@
     width: 104%;
 }
 
-.RangeTooltip {
-    width: 100%;
-    height: 30px;
-    border: 5px grey solid;
-    margin-top: 10px;
+.ToggleTooltip {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.ToggleTooltip button {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+
+.ToggleTooltip p {
+    display: inline-block;
+    margin-right: 20px;
+    height: 100%;
 }
