--- a/new_madrid/src/App.css
+++ b/new_madrid/src/App.css
@@ -95,6 +95,7 @@
 .Info p {
   font-size: 16px;
   color: grey;
-  text-align: left;
+  text-align: right;
   margin-left: 24px;
+  margin-right: 24px;
 }
