--- a/new_madrid/src/StandardGraph/style.css
+++ b/new_madrid/src/StandardGraph/style.css
@@ -12,7 +12,7 @@
 
 .StandardGraph h {
     display: block;
-    margin-left: 2%;
+    margin-left: 0px;
     margin-bottom: 15px;
     font-size: 24px;
 }
