--- a/new_madrid/src/Tools/style.css
+++ b/new_madrid/src/Tools/style.css
@@ -1,5 +1,5 @@
 .RangeSlider {
-    width: calc(100% - 10px);
+    width: calc(87%);
     height: 15px;
     border: 2px grey solid;
     margin-top: 10px;
