--- a/new_madrid/src/App.css
+++ b/new_madrid/src/App.css
@@ -70,8 +70,9 @@
 .GraphContainer {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  column-gap: 120px;
-  margin-left: -60px;
+  column-gap: 60px;
+
+  max-width: 92%;
 
   height:fit-content;
 
